assets/css/style.css
/*
Author: Bootstrapthemes
Author URI: http://bootstrapthemes.co
*/
/* ==========================================================================
   Author's custom styles
   ========================================================================== */
html,
body {
    background-color: #fff;
    font-size: 0.875rem;
    color: #797979;
    width: 100%;
    padding: 0;
    margin-left: 0;
    margin-right: 0;
    font-weight: 400;
    width:100%;
    font-family: 'Raleway', sans-serif;
}
.preloader {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #fefefe;
    z-index: 99999;
    height: 100%;
    width: 100%;
    overflow: hidden !important;
}

.loaded {
    width: 60px;
    height: 60px;
    position: absolute;
    left: 50%;
    top: 50%;
    background-image: url(../images/loading.gif);
    background-repeat: no-repeat;
    background-position: center;
    -moz-background-size: cover;
    background-size: cover;
    margin: -20px 0 0 -20px;
}
img {
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-user-drag: none;
    user-drag: none;
}
a,
a:hover,
a:active,
a:focus {
    text-decoration: none;
    outline: none;
}
a,
button,
a span {
    -webkit-transition: 0.2s ease-in-out;
    -o-transition: 0.2s ease-in-out;
    transition: 0.2s ease-in-out;
}
a{
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
}
.btn.extra-width {
    padding: 13px 40px;
}
.btn:focus,
.btn:active {
    outline: inherit;
}
*,
*:before,
*:after {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    /*    direction: rtl;*/
}
p {
    margin: 0 0 15px;

}

.clear {
    clear: both;
}

img {
    max-width: 100%;
}
textarea,
input[type="text"],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="search"],
input[type="tel"],
input[type="color"],
.uneditable-input {
    outline: none;
}
/*.form-control {
    border: 1px solid rgba(0, 0, 0, 0.08);
    font-size: 16px;
    height: 45px;
}*/
.form-control {
    display: inline-block;
    height: 35px;
    padding: 6px 25px;
    font-size: 14px;
    line-height: 1.42857143;
    color: #000;
    background-color: #fff;
    background-image: none;
    border: 1px solid #ccc;
    border-radius: 0px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
}
.form-control:focus {
    border-color: #bcefeb;
}

h1,
h2,
h3 {
    font-weight: 400;
    margin: 0;
    font-family: 'Montserrat', sans-serif;
}
h4,
h5 {
    font-weight: 400;
    margin: 0;
    line-height: 2rem;
    font-family: 'Montserrat', sans-serif;
}
h1 {
    font-size: 3.75rem;
    line-height: 5.5rem;
    color:#fff;
    letter-spacing: .4rem;
}
h2 {
    font-size:1.875rem;
    line-height: 3rem;
    text-transform: uppercase;

}
h3 {
    font-size:1.375rem;
    line-height: 2.5rem;  
    text-transform: uppercase;
}
h4 {
    font-size: 1rem;
    line-height: 2rem;
    margin-bottom: 1rem;
    text-transform: uppercase;
}
h5 {
    font-size: 1.125rem;
    margin-bottom: 1rem;
    color:#223d61;
    text-transform: uppercase;
}
h6 {
    font-size: 1rem;
    margin-bottom: .9rem;
}
p {
    line-height: 2rem;
    font-size: 0.875rem;
}
p:last-child {
    margin-bottom: 0px;
}
/*.home-wrap h1,*/
.home-wrap h2,
.home-wrap h3,
.home-wrap h4,
.home-wrap h5,
.home-wrap p {
    color: #ffffff;
    /*font-family: 'roboto', sans-serif;*/
}
.text {
    color: #333333;
}
.colorstext {
    color: #5e9a28;
}
.coloricon i {
    color: #5e9a28;
}
.colorsbg {
    background: #5e9a28;
    color: #ffffff;
}

.lightbg {
    background-color: #f9f9f9;
}
.bg-grey{
    background-color: #ddd;
}
.transition {
    -webkit-transition: all 300ms linear;
    -moz-transition: all 300ms linear;
    -o-transition: all 300ms linear;
    -ms-transition: all 300ms linear;
    transition: all 300ms linear;
}

.outofsectiontext{
    margin-top: 40px;
}

/*
Section
*/
.sections {
    padding-top:85px;
    padding-bottom: 105px;
    overflow: hidden;
}
.sections.footer {
    padding-bottom: 80px;
}
section .subtitle h5 {
    margin-top: 10px;
    font-size: 1.3rem;
}
.parallax-section {
    max-width: 100%;
    color: #ffffff;
}
section .title-half h2 {
    font-size: 3rem;
    line-height: 4rem;
    font-weight: 300;
    margin-bottom: 1.4rem;
}
section .subtitle-half h5 {
    font-weight: 100;
    font-size: 17px;
}
ul{
    margin:0;
    padding:0;
    list-style:none;
}

.heading {
    margin-bottom: 4rem;
}
.overlay {
    background-color: rgba(41, 39, 34, 0.75);
    width: 100%;
    height: 670px;
}
.map-overlay {
    background-color: rgba(255, 114, 0, 0.75);
    width: 100%;
    height:auto;
}
.video_overlay {
    background-color: rgba(41, 39, 34, 0.75);
    width: 100%;
    height: auto;
}

.no-padding {
    padding: 0 !important;
    margin:0 !important;
}
.fluid-blocks-col {
    padding: 70px 40px 0 80px;
}
.fluid-blocks-col-right {
    padding: 70px 80px 0 40px;
}
/*
Separator
*/
.separator {
    height: 1px;
    width: 170px;
    margin: 20px 0px;
    background: #eeeeee;
    position: relative;
}
.separator:after {
    position: absolute;
    left:0;
    bottom:0;
    height: 2px;
    width: 50px;
    background: #ff7200;
    content:"";

}
.separator2 {
    height: 1px;
    width:93%;
    margin: 20px 0px;
    background: #eeeeee;
    position: relative;
}
/* ... */

